syntax = "proto3";

option csharp_namespace = "CookingMedia.Recipe.Api";
import "Google/Api/annotations.proto";
import "google/protobuf/empty.proto";
import "model.proto";
package greet;

service RecipeStyleController {
	rpc Search (SearchRecipeStyleRequest) returns (SearchRecipeStyleResponse) {
		option (google.api.http) = {
			get: "/api/recipe-styles"
		};
	};

	rpc Get (GetRecipeStyleRequest) returns (RecipeStyleModel) {
		option (google.api.http) = {
			get: "/api/recipe-styles/{id}"
		};
	};

	rpc Add (AddRecipeStyleRequest) returns (RecipeStyleModel) {
		option (google.api.http) = {
			post: "/api/recipe-styles"
			body: "*"
		};
	};

	rpc Update (UpdateRecipeStyleRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put: "/api/recipe-styles/{id}"
			body: "*"
		};
	};

	rpc Delete (DeelteRecipeStyleRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			delete: "/api/recipe-styles/{id}"
		};
	};
}

message SearchRecipeStyleRequest {
	string name = 1;
	int32 page = 2;
	int32 page_size = 3;
}

message SearchRecipeStyleResponse {
	repeated RecipeStyleModel result = 1;
	PagingResultModel paging = 2;
}

message GetRecipeStyleRequest {
	int32 id = 1;
}

message AddRecipeStyleRequest {
	string name = 1;
}

message UpdateRecipeStyleRequest {
	string name = 1;
	int32 id = 100;
}

message DeelteRecipeStyleRequest {
	int32 id = 1;
}
